# Quiz-App

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  toolchain-windows.cmake
.github/workflows/: cmake-multi-platform.yml
assets/: resources.qrc
data/: sample_questions.json
src/: main.cpp
src/models/: playerprofile.h  quizquestion.h  quizresultpayload.h
src/network/: apiclient.cpp  apiclient.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow_functional.cpp
src/utils/: appconfig.cpp  appconfig.h  questionbank.cpp  questionbank.h
